# ECE1724_Project

./: Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/utils/: api.rs  app.rs  mod.rs  model.rs  terminal.rs  ui.rs
