[workspace]
members = [
    "backend", "frontend"
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["ECE1724 Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
time = { version = "0.3", features = ["macros", "serde", "formatting"] }
anyhow = "1.0"
thiserror = "2.0.17"
