[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
axum = { version = "0.8.7", features = ["macros", "json"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tower = "0.5.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "sqlite", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }