[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
anyhow.workspace = true
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
